Editing from agentzh++ and others++.
git-svn-id: http://svn.pugscode.org/pugs@23516 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 1 Aug 2006
+  Last Modified: 7 Aug 2006
   Number: 3
-  Version: 52
+  Version: 53
 
 =head1 Changes to Perl 5 operators
 
@@ -1009,7 +1009,7 @@ reduction of C<< infix:<x> >>.  This is deemed to be an insignificant problem.
 =head1 Junctive operators
 
 C<|>, C<&>, and C<^> are no longer bitwise operators (see
-L</Changes to existing operators>) but now serve a much higher cause:
+L</Changes to Perl 5 operators>) but now serve a much higher cause:
 they are now the junction constructors.
 
 A junction is a single value that is equivalent to multiple values. They
