--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -942,7 +942,7 @@ C<::($expr)> where you'd ordinarily put a package or variable name.
 The string is allowed to contain additional instances of C<::>, which
 will be interpreted as package nesting.  You may only interpolate
 entire names, since the construct starts with C<::>, and either ends
-immediately or is continued with another C<::> outside the curlies.
+immediately or is continued with another C<::> outside the parens.
 Most symbolic references are done with this notation:
 
     $foo = "Bar";
