--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 7 Aug 2006
+  Last Modified: 9 Aug 2006
   Number: 2
-  Version: 60
+  Version: 61
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -438,6 +438,13 @@ look like their corresponding uppercase types if you treat them that way.
 repeated autoboxing can slow your program more than the native type
 can speed it up.)
 
+Some object types can behave as value types.  Every object can produce
+a "safe key identifier" (C<SKID> for short) that uniquely identifies the
+object for hashing and other value-base comparisons.  Normal objects
+just use their address in memory, but if a class wishes to behave as a
+value type, it can define a C<.SKID> method that makes different objects
+look like the same object if they happen to have the same contents.
+
 =item *
 
 Variables with non-native types can always contain I<undefined> values,
@@ -453,14 +460,18 @@ to assign an undefined value to them:
 
 =item *
 
-All objects support a C<.meta> method that returns the class instance
-managing it, regardless of whether the object is defined:
+Every object supports a C<META> function/method that returns the
+metaclass instance managing it, regardless of whether the object
+is defined:
 
-    'x'.meta.get_method_list;   # get available methods for strings
-    Str.meta.get_method_list;   # same thing with the prototype object Str
+    'x'.META.get_method_list;   # get available methods for strings
+    Str.META.get_method_list;   # same thing with the prototype object Str
+    META(Str).get_method_list;  # same thing as function call
 
     'x'.get_method_list;        # this is an error - not a meta object
     Str.get_method_list;        # same thing
+
+(For a prototype system (a non-class-based object system), all objects are merely managed by the same meta object.)
 
 =item *
 
